<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment" android:orientation="vertical"
     >
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/fromTimeTextView"
                android:hint="@string/hintToEnterStart"  android:gravity="center_horizontal"
                android:textStyle="bold" android:onClick="showTimePicker" android:clickable="true" android:textSize="20dp"></TextView>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/to" android:textAlignment="center" android:gravity="center_horizontal"
                android:textStyle="bold"  android:textSize="20dp"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/toTimeTextView"
                android:hint="@string/hintToEnterEnd"  android:gravity="center_horizontal"
                android:textStyle="bold" android:onClick="showTimePicker" android:clickable="true" android:textSize="20dp"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/daily"
                android:text="@string/daily"
                android:layout_weight="1"
                android:onClick="handleDaily"

                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weekly"
                android:text="@string/weekly"
                android:layout_weight="1"
                android:onClick="showWeekDays"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/setTime"
                android:text="@string/set"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:onClick="setTime"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/clear"
                android:text="@string/clear"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:onClick="clearFieldsAlone"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/clearAll"
            android:text="@string/clearAll"
            android:onClick="clearFields"/>
        </LinearLayout>
</LinearLayout>
