<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".QuiteFragment" android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:orientation="vertical" android:layout_weight="1">
        <ImageView android:src="@drawable/keepquite1" android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:id="@+id/icon" android:layout_gravity="center"/>
        <TextView android:id="@+id/setVal" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:text="00 Mins"  android:layout_gravity="center" android:textSize="20dp" android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:orientation="vertical" android:layout_weight="1">
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/min_15"
                android:layout_weight="3" android:textStyle="bold" android:text="@string/mins15" android:onClick="setPreDefinedTime"
                android:layout_gravity="center"></Button>
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/min_30"
                android:layout_weight="3" android:textStyle="bold" android:text="@string/mins30" android:onClick="setPreDefinedTime"
                android:layout_gravity="center"></Button>
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/min_45"
                android:layout_weight="1" android:textStyle="bold" android:text="@string/mins45" android:onClick="setPreDefinedTime"
                android:layout_gravity="center"></Button>
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/min_60"
                android:layout_weight="1" android:textStyle="bold" android:text="@string/hour1" android:onClick="setPreDefinedTime"
                android:layout_gravity="center"></Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <com.superio.keepquite.CustomNumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" min="70" max="240" android:layout_weight="1" android:textStyle="bold" android:id="@+id/quiteTimePicker"/>

        <Button android:id="@+id/quiteTimePickerSet" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:text="@string/set" android:layout_weight="1" android:layout_gravity="center_vertical" android:onClick="setPreRollTime">
        </Button>
    </LinearLayout>
</LinearLayout>
